--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,6 +4,7 @@ $tableHeadBgColor: #04AA6D;
 $tableHeadTextColor: white;
 
 #users {
+    font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 
