--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -3,8 +3,11 @@ $evenRowBgColor: #f2f2f2;
 $tableHeadBgColor: #04AA6D;
 $tableHeadTextColor: white;
 
-#users {
+body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#users {
     border-collapse: collapse;
     width: 100%;
 
