--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -28,3 +28,31 @@ body {
         color: $tableHeadTextColor;
     }
 }
+
+input {
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    transition: border-color 0.3s ease;
+}
+
+input:hover {
+    border-color: #888;
+}
+
+input:focus {
+    outline: none;
+    border-color: dodgerblue;
+    box-shadow: 0 0 5px rgba(30, 144, 255, 0.5);
+}
+  
+label {
+    display: block;
+}
+
+.mb-3 {
+    margin-bottom: 1.5rem;
+}
