--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,58 +1,18 @@
 // Variables
-$evenRowBgColor: #f2f2f2;
+$globalFont: Arial, Helvetica, sans-serif;
+
+$inputPadding: 10px;
+$inputFocusBorderColor: rgb(30, 144, 255);
+$inputFocusShadowColor: rgba(30, 144, 255, 0.5);
+
+$tableEvenRowBgColor: #f2f2f2;
 $tableHeadBgColor: #04AA6D;
 $tableHeadTextColor: white;
+$tablePadding: 8px;
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $globalFont;
 }
 
-#users {
-    border-collapse: collapse;
-    width: 100%;
-
-    td, th {
-        border: 1px solid #ddd;
-        padding: 8px;
-    }
-    
-    tr:nth-child(even) {
-        background-color: $evenRowBgColor;
-    }
-    
-    th {
-        padding-top: 12px;
-        padding-bottom: 12px;
-        text-align: left;
-        background-color: $tableHeadBgColor;
-        color: $tableHeadTextColor;
-    }
-}
-
-input {
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    font-size: 14px;
-    transition: border-color 0.3s ease;
-}
-
-input:hover {
-    border-color: #888;
-}
-
-input:focus {
-    outline: none;
-    border-color: dodgerblue;
-    box-shadow: 0 0 5px rgba(30, 144, 255, 0.5);
-}
-  
-label {
-    display: block;
-}
-
-.mb-3 {
-    margin-bottom: 1.5rem;
-}
+@import '_table';
+@import '_input';
